# integrated-shrinking

./: .gitignore  LICENSE  Tree.v  integrated-shrinking.cabal
src/: Filter.hs  FromScratch.hs  IntegratedShrinking.hs  State.hs  UsingHedgehog.hs  UsingQuickCheck.hs  Util.hs  ValueDiffs.hs
