cabal-version:       >=1.10
name:                integrated-shrinking
version:             0.1.0.0
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     FromScratch
                       UsingHedgehog
                       UsingQuickCheck
                       ValueDiffs
  other-modules:       Util
  hs-source-dirs:      src
  build-depends:       base       >= 4.12 && < 4.13
                     , random
                     , containers
                       -- we do some low-level hedgehog hacking
                     , hedgehog   == 0.6.1
                     , QuickCheck >= 2.13 && < 2.14
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-show-valid-hole-fits
